<resources>
    <string name="app_name">Flexsame</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="testNFC">TestNFC</string>
    <string name="test_instruction">Put message here:</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="message_beaming_complete">Beaming complete</string>
    <string name="receiver">Receiver</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="wallet">"Wallet"</string>
    <string name="keys">Keys</string>
    <string name="action_register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="logout">Log out</string>
    <string name="update">Update</string>
    <string name="dialog_logout">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="authentication">Authentication</string>
    <string name="settings_authentication_fingerprint">Fingerprint</string>
    <string name="servicedesc">apdu service</string>
    <string name="aiddescription">aid apdu service other</string>
    <string name="admin">Admin</string>
    <string name="company">Company</string>
    <string name="companies">Companies</string>
    <string name="add">Add</string>
    <string name="company_name">Company Name</string>
    <color name="gray_shadow">#80AAAAAA</color>
    <string name="street">Street</string>
    <string name="house_number">House number</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="country">Country</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
