<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/collapse"
            app:srcCompat="@drawable/ic_collapse_24px"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="@dimen/input_field"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/company_name"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="@dimen/input_field"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="@dimen/input_field"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="@dimen/input_field"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/input_field"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="@dimen/input_field"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/password_confirmation"
            android:imeActionLabel="@string/add"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/add"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_marginBottom="16dp"
            android:background="@color/design_default_color_background"
            android:enabled="true"
            android:text="@string/add"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</layout>
