<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="adminViewModel"
            type="com.flexso.flexsame.ui.admin.AdminViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.admin.AdminFragment">
        <TextView
            android:id="@+id/title"
            style="@style/title"
            android:text="@string/companies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SearchView
            android:id="@+id/filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/company_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/company_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter" >

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:id="@+id/add_company_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:background="@drawable/background_shadow_top"
                android:gravity="bottom|center"
                android:orientation="vertical"
                android:visibility="invisible"
                app:layout_behavior="com.google.android.material.transformation.FabTransformationSheetBehavior">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/ic_collapse_24px" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="@dimen/input_field"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/company_name"
                    android:inputType="text"
                     />

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="@dimen/input_field"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="@dimen/input_field"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/last_name"
                    android:inputType="text"
                     />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="@dimen/input_field"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                     />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="@dimen/input_field"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                     />

                <EditText
                    android:id="@+id/password_confirm"
                    android:layout_width="@dimen/input_field"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/password_confirmation"
                    android:imeActionLabel="@string/add"
                    android:inputType="textPassword"
                     />

                <Button
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:enabled="true"
                    android:text="@string/add"
 />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                app:srcCompat="@drawable/ic_add_24px" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
